v1.0.28
- CHANGE: after playing a SID, go back to last viewed dir listing, not main menu

v1.0.27
- FIX: more than 3 dots in a dotted quad would crash the hostname resolver
- FIX: parse_integer was treating digit '9' as marking end of string :-(
- ADD: can now send an arbitrary character (by entering ASCII value : option F5 from F1 telnet menu)
- FIX: Can now send a ^C in telnet
- CHANGE: added a 'wait for keypress' after succesful xmodem upload
- FIX: default drive selection being overwritten with random values

v1.0.26
- FIX: telnet often failed to notice disconnect by remote server
- ADD: change border colour to indicate telnet connect/disconnect

v1.0.25
- FIX: vt100 emulation was leaving a cursor after a "clear to end of line" command ( [J ) 
- ADD: XMODEM upload support
- CHANGE: removed 'line mode' from telnet

v1.0.24
- CHANGE: split KipperTerm (telnet + gopher) into KipperTerm (enhanced telnet) and KipperGo (basic telnet + gopher)
- ADD: XMODEM download support for KipperTerm
- FIX: tell remote server screen size (40x25)
- FIX: vt100 no longer does line wrap & scroll when writing to bottom right hand corner
- FIX: telnet sessions now send 'keep alive' (stops my broadband router from losing NAT state)
- FIX: tcp was sending wrong seq number when ACKing inbound data just after sending data out
- FIX: telnet packets > 256 bytes not completely processed
- ADD: can change default disk drive

v1.0.23
- telnet now supports vt100 emulation (thanks to Lars Stollenwerk)
- gopher: fixed bug preventing connection to jamtronix.com
