@@ -1,5 +1,6 @@
 v1.0.28
 - CHANGE: after playing a SID, go back to last viewed dir listing, not main menu
+- FIX: PETSCII mode telnet was broken
 
 v1.0.27
 - FIX: more than 3 dots in a dotted quad would crash the hostname resolver
